compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@generics.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Add<Int32, Int64> in Int32 {\n                pub fn add(other: Int32) -> Int64 {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            3729622771921818476,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    3729622771921818476,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        3729622771921818476,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Identifier {
                            name: "Add",
                            location: <internal>:17:20,
                        },
                        location: <internal>:17:20,
                    },
                    type_params: [
                        Type {
                            id: ItemId(
                                11582867247635641484,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [
                                            Named(
                                                Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                name: Identifier {
                                    name: "Int32",
                                    location: <internal>:0:0,
                                },
                                location: <internal>:0:0,
                            },
                            type_params: [],
                            location: <internal>:21:26,
                        },
                        Type {
                            id: ItemId(
                                3407981406265970223,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [
                                            Named(
                                                Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                name: Identifier {
                                    name: "Int64",
                                    location: <internal>:0:0,
                                },
                                location: <internal>:0:0,
                            },
                            type_params: [],
                            location: <internal>:28:33,
                        },
                    ],
                    location: <internal>:20:34,
                },
                target: Type {
                    id: ItemId(
                        11582867247635641484,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Identifier {
                            name: "Int32",
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:38:43,
                },
                methods: [
                    TraitMethodImplementation {
                        method_id: None,
                        visibility: Public,
                        name: SymbolName {
                            namespace: None,
                            name: Identifier {
                                name: "add",
                                location: <internal>:69:72,
                            },
                            location: <internal>:69:72,
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:73:78,
                                },
                                param_type: Type {
                                    id: ItemId(
                                        11582867247635641484,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [
                                                    Named(
                                                        Identifier {
                                                            name: "std",
                                                            location: <internal>:0:0,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                        location: <internal>:0:0,
                                    },
                                    type_params: [],
                                    location: <internal>:80:85,
                                },
                                location: <internal>:73:85,
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    3407981406265970223,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Identifier {
                                        name: "Int64",
                                        location: <internal>:0:0,
                                    },
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:90:95,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:96:98,
                        },
                        location: <internal>:62:98,
                    },
                ],
                location: <internal>:13:112,
            },
        ),
    },
    statements: {},
    expressions: {},
}
