compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@method_no_ret.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Add in Int32 {\n                fn add(other: Int32) {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12506335137184408543,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    12506335137184408543,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        12506335137184408543,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Add",
                                location: <internal>:17:20,
                            },
                        ),
                        location: <internal>:17:20,
                    },
                    type_params: [],
                    location: <internal>:17:20,
                },
                target: Type {
                    id: ItemId(
                        9261998375256972311,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Int32",
                                location: <internal>:0:0,
                            },
                        ),
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:24:29,
                },
                methods: [
                    TraitMethodImplementation {
                        id: ItemId(
                            4915573846357939171,
                        ),
                        method_id: None,
                        visibility: Private,
                        name: SymbolName {
                            namespace: None,
                            name: Named(
                                Identifier {
                                    name: "add",
                                    location: <internal>:51:54,
                                },
                            ),
                            location: <internal>:51:54,
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:55:60,
                                },
                                param_type: Type {
                                    id: ItemId(
                                        9261998375256972311,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [
                                                    Named(
                                                        Identifier {
                                                            name: "std",
                                                            location: <internal>:0:0,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        name: Named(
                                            Identifier {
                                                name: "Int32",
                                                location: <internal>:0:0,
                                            },
                                        ),
                                        location: <internal>:0:0,
                                    },
                                    type_params: [],
                                    location: <internal>:62:67,
                                },
                                location: <internal>:55:67,
                            },
                        ],
                        type_parameters: [],
                        return_type: None,
                        block: Block {
                            statements: [],
                            location: <internal>:69:71,
                        },
                        location: <internal>:48:71,
                    },
                ],
                location: <internal>:13:85,
            },
        ),
    },
    statements: {},
    expressions: {},
}
