compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@methods.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Cast in Int32 {\n                pub fn to_string() -> String {}\n\n                pub fn to_int() -> Int32 {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            18220724335406912908,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    18220724335406912908,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        18220724335406912908,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Cast",
                                location: <internal>:17:21,
                            },
                        ),
                        location: <internal>:17:21,
                    },
                    type_params: [],
                    location: <internal>:17:21,
                },
                target: Type {
                    id: ItemId(
                        9261998375256972311,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Int32",
                                location: <internal>:0:0,
                            },
                        ),
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:25:30,
                },
                methods: [
                    TraitMethodImplementation {
                        id: ItemId(
                            17562429064548613062,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: SymbolName {
                            namespace: None,
                            name: Named(
                                Identifier {
                                    name: "to_string",
                                    location: <internal>:56:65,
                                },
                            ),
                            location: <internal>:56:65,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    6878914491779363853,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "String",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:71:77,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:78:80,
                        },
                        location: <internal>:49:80,
                    },
                    TraitMethodImplementation {
                        id: ItemId(
                            2127391008029776,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: SymbolName {
                            namespace: None,
                            name: Named(
                                Identifier {
                                    name: "to_int",
                                    location: <internal>:105:111,
                                },
                            ),
                            location: <internal>:105:111,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    9261998375256972311,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:117:122,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:123:125,
                        },
                        location: <internal>:98:125,
                    },
                ],
                location: <internal>:13:139,
            },
        ),
    },
    statements: {},
    expressions: {},
}
