compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@priv_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Add in Int32 {\n                fn add(other: Int32) -> Int32 {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: TraitImpl(
            TraitImplementation {
                id: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                use_id: None,
                name: Type {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            14895811466431262429,
                        ),
                    },
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Add",
                                location: <internal>:17:20,
                            },
                            type_arguments: [],
                            location: <internal>:17:20,
                        },
                        location: <internal>:17:20,
                    },
                    location: <internal>:17:20,
                },
                target: Type {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            6143724420395906933,
                        ),
                    },
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:0:0,
                                },
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: <internal>:24:29,
                            },
                            type_arguments: [],
                            location: <internal>:24:29,
                        },
                        location: <internal>:24:29,
                    },
                    location: <internal>:24:29,
                },
                visibility: Private,
                methods: [
                    TraitMethodImplementation {
                        id: Method(
                            MethodId {
                                item: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                index: Idx(
                                    0,
                                ),
                            },
                        ),
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "add",
                            location: <internal>:51:54,
                        },
                        parameters: [
                            Parameter {
                                index: 0,
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:55:60,
                                },
                                param_type: Type {
                                    id: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            6143724420395906933,
                                        ),
                                    },
                                    name: Path {
                                        root: [
                                            Namespace {
                                                name: Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            },
                                        ],
                                        name: Type {
                                            name: Identifier {
                                                name: "Int32",
                                                location: <internal>:62:67,
                                            },
                                            type_arguments: [],
                                            location: <internal>:62:67,
                                        },
                                        location: <internal>:62:67,
                                    },
                                    location: <internal>:62:67,
                                },
                                vararg: false,
                                location: <internal>:55:67,
                            },
                        ],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    6143724420395906933,
                                ),
                            },
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                ],
                                name: Type {
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:72:77,
                                    },
                                    type_arguments: [],
                                    location: <internal>:72:77,
                                },
                                location: <internal>:72:77,
                            },
                            location: <internal>:72:77,
                        },
                        block: Block {
                            statements: [],
                            location: <internal>:78:80,
                        },
                        location: <internal>:48:80,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:13:94,
            },
        ),
    },
    statements: {},
    expressions: {},
}
