compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@pub_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Add in Int32 {\n                pub fn add(other: Int32) -> Int32 {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            3729622771921818476,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    3729622771921818476,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        3729622771921818476,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Identifier {
                            name: "Add",
                            location: <internal>:17:20,
                        },
                        location: <internal>:17:20,
                    },
                    type_params: [],
                    location: <internal>:17:20,
                },
                target: Type {
                    id: ItemId(
                        11582867247635641484,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Identifier {
                            name: "Int32",
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:24:29,
                },
                methods: [
                    TraitMethodImplementation {
                        method_id: None,
                        visibility: Public,
                        name: SymbolName {
                            namespace: None,
                            name: Identifier {
                                name: "add",
                                location: <internal>:55:58,
                            },
                            location: <internal>:55:58,
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:59:64,
                                },
                                param_type: Type {
                                    id: ItemId(
                                        11582867247635641484,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [
                                                    Named(
                                                        Identifier {
                                                            name: "std",
                                                            location: <internal>:0:0,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                        location: <internal>:0:0,
                                    },
                                    type_params: [],
                                    location: <internal>:66:71,
                                },
                                location: <internal>:59:71,
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    11582867247635641484,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:0:0,
                                    },
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:76:81,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:82:84,
                        },
                        location: <internal>:48:84,
                    },
                ],
                location: <internal>:13:98,
            },
        ),
    },
    statements: {},
    expressions: {},
}
